# piano_lightbar_p4

./: CMakeLists.txt
components/p4_bsp/: CMakeLists.txt  README.md  idf_component.yml
components/p4_bsp/include/: bsp_display.h  bsp_display_touch.h  bsp_i2c.h  bsp_lvgl_adapter.h  bsp_touch.h
components/p4_bsp/src/: bsp_display.c  bsp_display_touch.c  bsp_i2c.c  bsp_lvgl_adapter.c  bsp_touch.c
main/: CMakeLists.txt  bsp_board.h  idf_component.yml  main.c  note_mapping.c  note_mapping.h  renderer.c  renderer.h  song_player.c  song_player.h  ui.c  ui.h
